--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/client": "^6.24.3",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.69.0",
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "next": "14.2.15",
+    "next-sanity": "^9.8.35",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
-    "sharp": "^0.33.5"
+    "sanity": "^3.69.0",
+    "sharp": "^0.33.5",
+    "styled-components": "^6.1.14"
   },
   "devDependencies": {
     "@types/node": "^20",
